<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context="com.example.android.mpougatsa.MainActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="5dp"
        android:maxLines="2"
        android:text="@string/Description"
        android:textAlignment="center"
        android:textColor="@color/colourTextFont"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="5dp"
            android:text="@string/Tel"
            android:textAlignment="textStart"
            android:textColor="@color/colourTextFont"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:autoLink="phone"
            android:text="@string/phones"
            android:textAlignment="center"
            android:textColor="@color/colourTextFont"
            android:textSize="18sp" />
    </LinearLayout>


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="150dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:maxLines="2"
        android:text="@string/slogan"
        android:textAlignment="center"
        android:textColor="@color/colourTextFont"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/colorBackground"
            android:contentDescription="@string/facebook_link"
            android:onClick="facebook"
            android:src="@drawable/facebook" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/colorBackground"
            android:contentDescription="@string/twitter_link"
            android:onClick="twitter"
            android:src="@drawable/twitter" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/colorBackground"
            android:contentDescription="@string/webpage_link"
            android:onClick="google"
            android:src="@drawable/googleplus" />
    </LinearLayout>

</LinearLayout>
